--- a/style.css
+++ b/style.css
@@ -277,3 +277,10 @@ body {
     grid-template-columns: 1fr;
   }
 }
+
+.site-credit {
+  text-align: center;
+  padding: 10px 16px 16px;
+  font-size: 13px;
+  color: #4b443c;
+}
